2009-11-02	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/common.php: Fixed alignment of the filter input dialog 

	* pf/lib/pf/SNMP.pm, pf/lib/pf/vlan.pm: Removed dead code, added POD
	doc, added TODO tasks

	* pf/NEWS, pf/conf/pf-release: bumped to 1.9.0dev

2009-10-30	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Correctly pinned Parse::RecDescent dependency to
	version 1.94 which is known to work. Fixes #806;
	http://www.packetfence.org/mantis/view.php?id=806

2009-10-28	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/NEWS, pf/packetfence.spec: 1.8.5 ready

	* pf/lib/pf/services.pm: In conf/switches.conf uplink=dynamic is no
	longer case-sensitive. Fixes #831;
	http://packetfence.org/mantis/view.php?id=831

	* pf/lib/pf/violation.pm: performance: verifying if violation already 
	exists in violation_trigger. Improves performance in situation where 
	there are a lot of devices repetively generating violation (ex: blocked
	iPods) because we detect it before launching `pfcmd violation add`.
	Also decreased logging prority from WARN to INFO

	* pf/lib/pf/violation.pm: Tighter validation in violation_trigger when
	database query returns a non-empty array (which is a bigger problem yet
	to be identified)

2009-10-27	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Decided to get rid of
	the release notes section (avoids manual data duplication)
	Added a pointer to NEWS, UPGRADE and ChangeLog in "About this guide"
	section.

	* pf/conf/pf-release: Version bump to 1.8.5

	* pf/docs/PacketFence_Administration_Guide.odt: Integrated release
	notes
	
	* pf/docs/PacketFence_Developers_Guide.odt,
	pf/docs/PacketFence_Installation_Guide.odt: Bumped release month

	* pf/installer.pl: Refer to database schema symlink instead of using a
	hardcoded version number

	* pf/installer.pl: Got rid of dead installer code

	* pf/t/SNMP.t, pf/t/critic.t, pf/t/pf.t, pf/t/pfcmd.t, pf/t/php.t,