@@ -30,13 +30,24 @@ sub lookup_node {
     if ( node_exist($mac) ) {
 
         my $node_info = node_view($mac);
-        $return .= "Address : $mac";
+        $return .= "MAC Address: $mac\n";
 
-        if ( mac2ip($mac) ) {
-            $return .= " (" . mac2ip($mac) . ")\n";
+        # fetch IP and DHCP information
+        my $node_iplog_info = iplog_view_open_mac($mac);
+        if (defined($node_iplog_info->{'ip'})) {
+
+            $return .= "IP Address : ".$node_iplog_info->{'ip'}."\n";
+            $return .= "IP Info    : IP active since " . $node_iplog_info->{'start_time'} .
+                       " and DHCP lease valid until ".$node_iplog_info->{'end_time'}."\n";
+            
         } else {
-            $return .= "\n";
+            $return .= "IP Address : Unknown\n";
+            $return .= "IP Info    : No IP information available\n";
+            
         }
+
+        # DHCP history
+        $return .= "DHCP Info  : Last DHCP request at ".$node_info->{'last_dhcp'}."\n";
 
         my $owner  = $node_info->{'pid'};
         my $status = $node_info->{'status'};
@@ -48,21 +59,21 @@ sub lookup_node {
             $status = "grace";
         }
         $owner = "unregistered" if ( $owner eq '1' );
-        $return .= "Owner   : $owner\n"  if ($owner);
-        $return .= "Status  : $status\n" if ($status);
-        $return .= "Name    : " . $node_info->{'computername'} . "\n"
+        $return .= "Owner      : $owner\n"  if ($owner);
+        $return .= "Status     : $status\n" if ($status);
+        $return .= "Name       : " . $node_info->{'computername'} . "\n"
             if ( $node_info->{'computername'} );
-        $return .= "Notes   : " . $node_info->{'notes'} . "\n"
+        $return .= "Notes      : " . $node_info->{'notes'} . "\n"
             if ( $node_info->{'notes'} );
 
         my $vendor = oui_to_vendor($mac);
         if ($vendor) {
-            $return .= "Vendor  : $vendor\n";
+            $return .= "MAC Vendor : $vendor\n";
         }
 
         # TODO: output useragent class like in dhcp fingerprint
 
-        $return .= "Browser : " . $node_info->{'user_agent'} . "\n"
+        $return .= "Browser    : " . $node_info->{'user_agent'} . "\n"
             if ( $node_info->{'user_agent'} );
 
         if ( $node_info->{'dhcp_fingerprint'} ) {
@@ -71,7 +82,7 @@ sub lookup_node {
             if ( scalar(@fingerprint_info_array == 1) ) {
                 my $fingerprint_info = $fingerprint_info_array[0];
                 my $os = $fingerprint_info->{'os'};
-                $return .= "OS      : $os\n" if ( defined($os) );
+                $return .= "OS         : $os\n" if ( defined($os) );
             }
         }
 
@@ -89,7 +100,7 @@ sub lookup_node {
             }
         }
         if ( $port && ( $switch_ip || $switch_mac ) && $vlan ) {
-            $return .= "Location: port $port (vlan $vlan) on switch "
+            $return .= "Location   : port $port (vlan $vlan) on switch "
                 . ( $switch_ip || $switch_mac );
             if ( $switch_ip && $switch_mac ) {
                 $return .= " ($switch_mac)";
